Implement Beta9 policy and enforcement hardening